# Industrial-Automation-Simulation-Using-ROS-ARIAC2020

./: .directory  CMakeLists.txt  README.md
config/trial_config/: final_663.yaml
config/user_config/: group1_config.yaml
include/: agv.h  assembly_handler.h  bins_handler.h  gantry_robot.h  kitting_robot.h  order_handler.h  utils.h
launch/: ariac.launch
msg/: Task.msg
src/: agv.cpp  assembly_handler.cpp  bins_handler.cpp  gantry_robot.cpp  kitting_handler.cpp  kitting_robot.cpp  order_handler.cpp  utils.cpp
src/nodes/: kitting_robot_handler.cpp  rwa4_node.cpp
srv/: empty_slot_pose.srv  kitting_part_details.srv
